fix: JDK17-unsafe List.getFirst() in time series load tests
startContainers()/startCluster() return List<ServerWrapper>, so
.getFirst() on them is the JDK21 SequencedCollection default method,
unavailable under java17. Introduced by cherry-picked commit fe3a1da9d
(test(load): time series load tests). Replace with get(0).